--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" type ="text/css" href="resources/css/style.css"
     </head>
 <body>
-<h1>Discover hidden places around you</h1>
-<p><a href="#"></a>Download Excursion(Coming Soon)</p>
+<h1 class="header--main">Discover hidden places around you</h1>
+<p><a class="p1--main" href="#">Download Excursion(Coming Soon)</a></p>
 
 
 </body>
