--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
 <h1 class="header--main">Discover hidden places around you</h1>
 <p><a class="p1--main" href="#">Download Excursion(Coming Soon)</a></p>
+<video autoplay loop> 
 
+    <source src="resources/videos/excursion.mp4" type = "video/mp4">
+    
+</video>
 
 </body>
 
