--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 
 <h4 class = "header--subheader">Excursion remembers places you like, and recommends new points of interest around you.</h4>
 
+<p><img src="resources/images/camp.jpg"></p>
+<p class="p1--image"><img src="resources/images/phone.png"></p>
+
+<h2 class="header--secondary">Coming soon for iPhone and Android</h2>
+<p><a class="p1--main" href="#">Download Excursion(Coming Soon)</a></p>
+
+<p class="p--footer">Ⓒ Excursion</p>
+
+
 </body>
 
 </html>
