--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <h4 class = "header--subheader">Excursion remembers places you like, and recommends new points of interest around you.</h4>
 
 <p><img src="resources/images/camp.jpg"></p>
-<p class="p1--image"><img src="resources/images/phone.png"></p>
+<p><img src="resources/images/iphone.png" class="p1--image" ></p> 
 
 <h2 class="header--secondary">Coming soon for iPhone and Android</h2>
 <p><a class="p1--main" href="#">Download Excursion(Coming Soon)</a></p>
